--- a/Pages/People/people/style2.css
+++ b/Pages/People/people/style2.css
@@ -1,10 +1,11 @@
 .container {
     display: grid;
-    grid-template-columns: 0.3fr 0.2fr 3.2fr 0.3fr;
+    grid-template-columns: 0.3fr 0.6fr 3.2fr 0.3fr;
     grid-template-rows: 0.3fr 0.1fr 0.2fr 4.1fr 0.3fr;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas: "header header header header" "header1 header1 header1 header1" ". body1 body1 ." ". season profiles ." ". . . .";
+    justify-content: space-around;
 }
 
 .header {
@@ -93,20 +94,24 @@ input {
     width: auto;
 }
 
+.line {
+    position: relative;
+}
+
 .vl {
     border-left: 3px solid #58342c;
-    height: 1000px;
+    height: 1330px;
     position: absolute;
-    left: 15%;
+    left: 100%;
     margin-left: -15px;
-    top: 1;
 }
 
 .hrr {
     background-color: #58342c;
-    width: 90px;
+    width: 60px;
     height: 2px;
-    margin-right: 60px;
+    margin-right: 150%;
+    /* Adjust as needed */
 }
 
 #here {
@@ -114,5 +119,5 @@ input {
 }
 
 .img {
-    width: 250px;
+    width: 100px;
 }
