--- a/Midely's Job/academics.css
+++ b/Midely's Job/academics.css
@@ -43,6 +43,32 @@ body {
     margin: 0px;
 }
 
+@font-face { 
+    font-family: 'Rachel';  
+    src: url('Fonts/Rachel\ Roman.ttf') format('truetype'); 
+} 
+ 
+@font-face { 
+    font-family: 'NeueMontreal'; 
+    font-weight: lighter; 
+    font-style: normal; 
+    src: url('Fonts/NeueMontreal-Light.otf') format('opentype'); 
+} 
+
+@font-face { 
+    font-family: 'NeueMontreal'; 
+    font-weight: normal; 
+    font-style: normal; 
+    src: url('Fonts/NeueMontreal-Regular.otf') format('opentype'); 
+} 
+ 
+@font-face { 
+    font-family: 'NeueMontreal'; 
+    font-weight: bold; 
+    font-style: bold; 
+    src: url('Fonts/NeueMontreal-Bold.otf') format('opentype'); 
+}
+
 #midely {
     float: right;
     margin-left: 10px;
