--- a/Midely's Job/report.css
+++ b/Midely's Job/report.css
@@ -21,8 +21,8 @@
   
   .secondspace {  display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 0.6fr 1.4fr;
-    gap: 0px 0px;
+    grid-template-rows: auto;
+    gap: 0px 20px;
     grid-auto-flow: row;
     grid-template-areas:
       "fmsq fmsq fmsq"
@@ -30,7 +30,12 @@
     grid-area: secondspace;
   }
   
-  .fmsq { grid-area: fmsq; }
+  .fmsq {
+    grid-area: fmsq;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
   
   .fstq { grid-area: fstq; }
   
@@ -40,9 +45,49 @@
   
   
   body {
-    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+}
+@font-face { 
+    font-family: 'Rachel';  
+    src: url('Fonts/Rachel\ Roman.ttf') format('truetype'); 
+} 
+ 
+@font-face { 
+    font-family: 'NeueMontreal'; 
+    font-weight: lighter; 
+    font-style: normal; 
+    src: url('Fonts/NeueMontreal-Light.otf') format('opentype'); 
+} 
+
+@font-face { 
+    font-family: 'NeueMontreal'; 
+    font-weight: normal; 
+    font-style: normal; 
+    src: url('Fonts/NeueMontreal-Regular.otf') format('opentype'); 
+} 
+ 
+@font-face { 
+    font-family: 'NeueMontreal'; 
+    font-weight: bold; 
+    font-style: bold; 
+    src: url('Fonts/NeueMontreal-Bold.otf') format('opentype'); 
+}
+.bigsentence h1 {
+    font-family: 'NeueMontreal';
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    text-align: left;
+    
+}
+.bigsentence p {
+    font-family: 'NeueMontreal';
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    
 }
 
 #reportfrm {
@@ -50,7 +95,7 @@
 }
 
 form {
-    background-color: #2596be;
+    background-color: rgb(37, 150, 190);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -69,7 +114,7 @@ input[type="email"],
 textarea {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid rgb(204, 204, 204);
     border-radius: 5px;
     box-sizing: border-box;
 }
@@ -82,8 +127,8 @@ button {
     display: block;
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
-    color: #fff;
+    background-color: rgb(0, 123, 255);
+    color: rgb(255, 255, 255);
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -91,42 +136,70 @@ button {
 }
 
 button:hover {
-    background-color: #689ccc;
+    background-color: rgb(104, 156, 204);
 }
 
+
+
+
+
+
+#FamQ{
+    font-family: 'NeueMontreal'; 
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 48px;
+    text-align: center;
+    white-space: nowrap;
+        
+    }
 
 .fstq{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    }
-.boxsghir{
-    height: 55px;
-    width: 230px;
-    color: white;
-    
- }
-#qst{
-    font-size: 25px;   
-    flex-direction: row;
-    text-align: center;
-    background-color:#10345c
+    width: 240px;
+    height: 220px;
+    position: relative;
 }
-.answer{
-    height: 170px;
-    background-color:#689ccc ;
-    color: white;
+.firstquestion{
+    height: 60px;
+    width: 240px;
+    background-color: rgba(11, 55, 91, 1);
+    position: absolute;
+}
+.firstquestion h2{
+    color: rgba(255, 255, 255, 1);
+    font-family: 'NeueMontreal';
     font-size: 25px;
-    text-align: center;
-    }
+    font-weight: 700;
+    line-height: 48px;
+    position: absolute;
+    left: 15px;
+    bottom: -18px;
+}
+.firstanswer{
+    height: 160px;
+    width: 240px;
+    background-color: rgba(103, 158, 203, 1);
+    position: absolute;
+    top: 60px;
+}
+.firstanswer p{
+    font-family: 'NeueMontreal';
+    font-size: 23px;
+    font-weight: 400;
+    line-height: 40.8px;
+    position: absolute;
+    left: 15px;
+    top: -10px;
+    color: rgba(255, 255, 255, 1);
+}
 
 .scnq{
-        display: flex;
-        justify-content: center;
-        }
-
+    width: 240px;
+    height: 220px;
+    position: relative;
+}
 .thdq{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    }
+    width: 240px;
+    height: 220px;
+    position: relative;
+}
