--- a/Laib/evening.css
+++ b/Laib/evening.css
@@ -1,6 +1,7 @@
 body{
  margin:0px;
  overflow-x: hidden;
+ 
 }
 .top_bar { 
     display: flex; 
@@ -61,264 +62,193 @@ nav ul li a:hover {
     color: #442013; 
 }
 
-.evening{
-    position: relative;
-    width: 372px;
-    height: 71px;
-    top: -1px;
-    left: 260px;
-    gap: 0px;
-    opacity: 0px; 
-     background-color: rgba(67, 134, 190, 1);
+.titre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 0;
 }
-.challenges{
-     position: relative;
-     width: 372px;
-     height: 71px;
-     top: 70px;
-     left: 632px;
-     gap: 0px;
-     opacity: 0px; 
-     background-color: rgba(250, 41, 69, 1);
+.bx {
+  width:300px ;
+  height:37px ;
+  text-align: center;
+  justify-content: center;
+  padding: 15px 40px;
 }
-#script{
-     
-      position: relative;
-      font-family: 'NeueMontreal';
-      font-size: 48px;
-      font-weight: 400;
-      line-height: 57.6px;
-      text-align: left;
-      color: rgba(255, 255, 255, 1);
-      left: 70px;
+.bx a{
+  color:rgba(255, 255, 255, 1);
+  text-decoration: none;
+  font-size: 40px;
+  font-family: "NeueMontreal";
+  font-size: 32px;
+  font-weight: 200;
+  line-height: 38.4px;
+  
 }
-#script:hover{
-     cursor:pointer;
-     font-weight: 700; 
+.bx a:hover,.bx a:visited{
+  font-weight: 800;
+  font-size: 40px;
 }
-.evening #script{
-     left: 100px;
+.Blue{
+  background: rgba(67, 134, 190, 1);
+}
+.red{
+  background-color:rgba(250, 41, 69, 1);
+}
+.green{
+  background-color: rgb(6, 228, 6);
 }
 .container{
-    width: 1200px;
-    height: 656px;
-    top: 90px;
-    left: 50px;
-    gap: 0px;
-    opacity: 0px;
-    background-color: rgba(255, 255, 255, 1);
-    position: relative;
-    box-shadow: 8px 0px 40px rgb(207, 207, 207);
+    display: flex;
+    background-color: rgba(198, 198, 204, 0.63);
+    justify-content: center;
+    align-items: center;
+    padding: 40px 0;
 }
-
+.AI{
+   display: flex; 
+   width: 1000px;
+   height: 700px;
+   background: #fff;
+}
 .blue{
-    width: 285px;
-    height: 656px;
-    top: 0px;
-    left: 0px;
-    gap: 0px;
-    opacity: 0px;
-    position: absolute;
     background-color:rgba(103, 158, 203, 1) ;
+    height:700px ;
+    width:250px ;
 }
-
-#history{
-     width: 107.16px;
-     height: 28.38px;
-     top: 60px;
-     left: 28px;
-     gap: 0px;
-     opacity: 0px;
-     position: absolute;   
-     color: rgba(255, 255, 255, 1);
-     font-size: 38px;
-     font-family:'NeueMontreal';
+.history{
+    color: rgba(255, 255, 255, 1);
+    font-size: 28px;
+    font-family:'NeueMontreal';
+    padding: 50px 25px;
+   
 }
-
 .Hi{
-    
-    position: absolute;
-    width: 815px;
-    height: 656px;
-    left: 285px;
-    font-family:'NeueMontreal' ;
-}
-
-#message{
+     padding: 50px 0px 0px 25px;
+     font-family:'NeueMontreal' ;
+ }
+ .message{
     font-family: 'NeueMontreal';
-     width: 700px;
-     height: 92.24px;
-     top: 0px;
-     left: 35px;
-     gap: 0px;
      opacity: 0px;
-     position: absolute;
-     font-size: 38px;
-     color: #373833;
-     line-height: 60px;
+     font-size: 40px;
+     color:rgba(55, 56, 51, 1);
+     line-height: 50px;
 }
 #Ev{
-    color:rgba(103, 158, 203, 1);
     font-size: 60px;
     font-weight: 900;
     font-family: 'NeueMontreal';
+    background: linear-gradient(to left,#EEF4F9 -137.56%, #4386BE 103.92%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-.boxes{
-    width: 762px;
-    height: 141px;
-    top: 200px;
-    left: 35px;
-    gap: 0px;
-    opacity: 0px;
-    position: absolute;   
-    
+.boxcont{
+   margin-top: 25px;
+   position: relative;
+   display: flex;
 }
 .box{
-    width: 195px;
-    height: 141px;
-    gap: 0px;
-    opacity: 0px;
     background-color: rgba(236, 236, 236, 1);
     border-radius: 17px;
+    width: 168px;
+    height: 141px;
     animation-name:slideleft;
     animation-duration: 1s;
+    position: absolute;
 
+}
+.two{
+    top: 0;
+    left: 180px;
+}
+.three{
+    top: 0;
+    left: 180px;
+}
+.four{
+    top: 0;
+    left: 360px;
 }
 @keyframes slideleft{
     from{transform: translateX(800%);}
 }
-#box1{
-    position: absolute;   
-    top: 0px;
-    left: 0px;
-}
-#box2{
-    position: absolute;   
-    top: 0px;
-    left: 220px;
-}
-#box3{
-    position: absolute;   
-    top: 0px;
-    left: 440px;
-}
-#box4{
-    position: absolute;   
-    top: 0px;
-    left: 660px;
-}
-#smile{
-    position: absolute;
-    bottom: 4px;
-    left: 125px;
-    width: 15px;
-}
-
 .insidebox{
-    
-    position: absolute;
-    font-size: 12px;
-    top: 0px;
-    left: 10px;
-    line-height: 20px;
+    font-size: 10px;
+    line-height: 16px;
     font-family: 'NeueMontreal';
-    
+    padding-left: 5px;
 }
-
 #word{
     font-family: 'NeueMontreal';
-    display: inline;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: 800;
 }
 .sidebox{
-    
-    width: fit-content;
-    position: absolute;
-    top: 106px;
-    right: 10px;
-    border-radius: 3px;
     width: 25px;
     height: 25px;
+    border-radius: 3px;
     background-color:  rgba(103, 158, 203, 1);
-
-}
-#letter{
-    
+    text-align: center;
+    position: absolute;
     font-family: 'Rachel';
-    font-size: 20px;
+    font-size: 17px;
     font-weight: 700;
     line-height: 20px;
-    text-align: left;
     color: rgba(11, 55, 91, 1);
-    position: absolute;
-    left: 5px;
-    
+    right: 10px;
+    bottom: 10px;
+    transition: background-color 0.3s, color 0.3s;
 }
-
-#box2 #letter{
-    left:10px;
-    top: 2px;
-    
-}
-#box3 #letter{
-    top: 3px;
-    
-}
-#box4 #letter{
-    top: 3px;
-    
+.sidebox:hover {
+    background-color: white; 
+    cursor: pointer;
 }
 .shine{
-    width: 234px;
-    height: 264px;
-    bottom: 0px;
-    right:0px;
-    gap: 0px;
-    opacity: 0px;
-    position: absolute;   
-    
+    top:15rem;
+    left:29rem;
+    position: relative; 
 }
-.input::placeholder{
-    color: rgba(158, 188, 212, 1);
-    font-size: 27px;
-    line-height: 20px;
-    padding: 10px; /* Add padding to ensure the text is fully visible */
-    width: 100%; /* Use 100% width to fill the input box */
-    height: 100%; /* Use 100% height to fill the input box */
-    margin: 0; /* Remove any margin */
-    box-sizing: border-box;
-    font-family: 'NeueMontreal';
-    
-}
-.input{
-    width: 740px;
-    height: 61px;
-    left: 35px;
-    bottom: 15px;
-    gap: 0px;
-    opacity: 0px;
-    position: absolute;
-    font-size: 25px;
+.input {
     color: rgba(103, 158, 203, 1);
-    box-shadow: 5px 8px 20px  rgb(207, 207, 207);
-    border: none;
-
-}
-.input:focus {
-    outline: none; /* Remove the default focus outline */
-    border-color: rgba(103, 158, 203, 1); /* Change the border color when focused */
-}
-button{
-    position: absolute;
-    bottom: 25px;
-    right: 45px;
+    box-shadow: 5px 8px 20px rgb(207, 207, 207);
+    text-align: left;
     background-color: rgba(255, 255, 255, 1);
-    border: 0px;
-    cursor: pointer;
-    
+    margin-top: 150px;
+    position: relative; /* Add relative positioning */
+    overflow: hidden; /* Hide overflow */
 }
+
+.input input {
+    padding: 15px; /* Adjust the padding as needed */
+    line-height: 30px; /* Adjust the line height as needed */
+    border: none; /* Remove border */
+}
+
+.input input::placeholder {
+    color: rgba(158, 188, 212, 1);
+    line-height: 30px; /* Match the line height of input */
+    font-family: 'NeueMontreal';
+    font-size: 15px; /* Adjust the font size as needed */
+}
+
+.input::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%);
+    pointer-events: none; /* Ensure pointer events pass through */
+}
+
+input:focus {
+    outline: none;
+    border-color: rgba(103, 158, 203, 1);
+}
+
+
 @font-face { 
     font-family: 'Rachel';  
     src: url('Rachel\ Roman.ttf') format('truetype'); 
